tests/03-typecheck/12-undefined.ref
tests/03-typecheck/12-undefined.stack:2:5, Semantic error: func unknown_function is not defined
