tests/03-typecheck/12-undefined.stack
func call_undefined (int) (int) in
    unknown_function
end
